Configure Azure Developer Pipeline

--- a/docs/workshop/workshop-2-tracing.ipynb
+++ b/docs/workshop/workshop-2-tracing.ipynb
@@ -54,9 +54,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀✨ Have you heard about AI Agents? These tech wonders are transforming the way we interact with the digital world! Here's a quick dive into what makes them so fascinating. 🧵👇\n",
+      "\n",
+      "1/ AI Agents are like digital superheroes! 💥 They autonomously perform tasks on our behalf, learning and adapting as they go. From virtual assistants to sophisticated problem solvers, they're here to make our lives easier. 🤖🙌 #AIAgents #TechNews\n",
+      "\n",
+      "2/ These agents use powerful tools like large language models and machine learning algorithms to understand and respond to our needs. Imagine having a personal assistant that gets smarter every day! 🧠💡 #ArtificialIntelligence #MachineLearning\n",
+      "\n",
+      "3/ Companies like AWS, Microsoft, and IBM are leading the charge, developing AI agents that can handle everything from customer service inquiries to complex data analysis. The future of business is definitely here! 📈🚀 #Innovation #AI\n",
+      "\n",
+      "4/ Curious about building your own AI Agent? 🛠️ Platforms like GitHub offer open-source projects to get you started. Whether you're a seasoned developer or a curious newbie, there's never been a better time to dive into AI! 🌐💻 #Coding #OpenSource\n",
+      "\n",
+      "Ready to welcome our new AI companions? Let's embrace the future together! 🌟🤖 #TechCommunity #FutureOfWork\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -156,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
