--- a/docs/workshop/LAB-SETUP.ipynb
+++ b/docs/workshop/LAB-SETUP.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,18 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CREDENTIALS\n",
-    "Username     = \"<Username>\"\n",
+    "Username     = \"User1-45022651@LODSPRODMCA.onmicrosoft.com\"\n",
     "\n",
-    "Password     = \"<Password>\"\n",
+    "Password     = \"e#BdhDB01!\"\n",
     "\n",
-    "AzureEnvName = \"<AzureEnvName>\"\n",
+    "AzureEnvName = \"AITOUR45022651\"\n",
     "\n",
-    "Subscription = \"<Subscription>\""
+    "Subscription = \"4f9ff489-eeba-4900-88d7-77b6ed48c277\""
    ]
   },
   {
@@ -58,9 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[0;33m!\u001b[0m First copy your one-time code: \u001b[0;1;39m3BDB-7745\u001b[0m\n",
+      "\u001b[0;1;39mOpen this URL\u001b[0m to continue in your web browser: https://github.com/login/device\n",
+      "\u001b[0;32m✓\u001b[0m Authentication complete.\n",
+      "- gh config set -h github.com git_protocol https\n",
+      "\u001b[0;32m✓\u001b[0m Configured git protocol\n",
+      "\u001b[0;33m!\u001b[0m Authentication credentials saved in plain text\n",
+      "\u001b[0;32m✓\u001b[0m Logged in as \u001b[0;1;39mluqqasek\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! echo Y | GITHUB_TOKEN=\"\" gh auth login --hostname github.com --git-protocol https --web --scopes workflow "
    ]
@@ -74,9 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[K\u001b[0;32m✓\u001b[0m Created fork \u001b[0;1;39mluqqasek/contoso-creative-writer\u001b[0m\n",
+      "\u001b[0;32m✓\u001b[0m Added remote \u001b[0;1;39morigin\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! GITHUB_TOKEN=\"\" gh repo fork --remote"
    ]
@@ -94,9 +125,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mAuthentication with username and password in the command line is strongly discouraged. Use one of the recommended authentication methods based on your requirements. For more details, see https://go.microsoft.com/fwlink/?linkid=2276314\u001b[0m\n",
+      "[\n",
+      "  {\n",
+      "    \"cloudName\": \"AzureCloud\",\n",
+      "    \"homeTenantId\": \"4cfe372a-37a4-44f8-91b2-5faf34253c62\",\n",
+      "    \"id\": \"4f9ff489-eeba-4900-88d7-77b6ed48c277\",\n",
+      "    \"isDefault\": true,\n",
+      "    \"managedByTenants\": [],\n",
+      "    \"name\": \"AIDay-lod49713739\",\n",
+      "    \"state\": \"Enabled\",\n",
+      "    \"tenantDefaultDomain\": \"LODSPRODMCA.onmicrosoft.com\",\n",
+      "    \"tenantDisplayName\": \"LODS-Prod-MCA\",\n",
+      "    \"tenantId\": \"4cfe372a-37a4-44f8-91b2-5faf34253c62\",\n",
+      "    \"user\": {\n",
+      "      \"name\": \"User1-45022651@LODSPRODMCA.onmicrosoft.com\",\n",
+      "      \"type\": \"user\"\n",
+      "    }\n",
+      "  }\n",
+      "]\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "! az login -u $Username -p $Password"
    ]
@@ -112,9 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "- **Username**: `User1-45022651@LODSPRODMCA.onmicrosoft.com`\n",
+       " - **Password**: `e#BdhDB01!`"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown\n",
     "Markdown(f\"- **Username**: `{Username}`\\n - **Password**: `{Password}`\")"
@@ -122,9 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start by copying the next code: \u001b[1mL2AHYHHDU\u001b[0m\n",
+      "Then, go to: https://microsoft.com/devicelogin\n",
+      "Waiting for you to complete authentication in the browser...\n",
+      "Device code authentication completed.\n",
+      "Logged in to Azure.ing subscriptions...\n"
+     ]
+    }
+   ],
    "source": [
     "! azd auth login --use-device-code --no-prompt"
    ]
@@ -147,9 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "azd env refresh -e AITOUR45022651"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown\n",
     "Markdown(f\"azd env refresh -e {AzureEnvName}\")"
@@ -171,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,9 +293,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-10-22T11:24:22.938469+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/resourceGroups/rg-AITOUR45022651/providers/Microsoft.Authorization/roleAssignments/f696d892-5614-4dfc-bea4-829c445c5bba\",\n",
+      "  \"name\": \"f696d892-5614-4dfc-bea4-829c445c5bba\",\n",
+      "  \"principalId\": \"927b5349-358c-4e9b-9786-e5ea7c1aee80\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR45022651\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/providers/Microsoft.Authorization/roleDefinitions/8ebe5a00-799e-43f5-93ac-243d3dce84a7\",\n",
+      "  \"scope\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/resourceGroups/rg-AITOUR45022651\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"927b5349-358c-4e9b-9786-e5ea7c1aee80\",\n",
+      "  \"updatedOn\": \"2024-10-22T11:24:23.556478+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-10-22T11:24:24.841500+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/resourceGroups/rg-AITOUR45022651/providers/Microsoft.Authorization/roleAssignments/1566377b-5d1d-4942-add2-d415747998aa\",\n",
+      "  \"name\": \"1566377b-5d1d-4942-add2-d415747998aa\",\n",
+      "  \"principalId\": \"927b5349-358c-4e9b-9786-e5ea7c1aee80\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR45022651\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/providers/Microsoft.Authorization/roleDefinitions/1407120a-92aa-4202-b7e9-c0e197c71c8f\",\n",
+      "  \"scope\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/resourceGroups/rg-AITOUR45022651\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"927b5349-358c-4e9b-9786-e5ea7c1aee80\",\n",
+      "  \"updatedOn\": \"2024-10-22T11:24:25.435512+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": \"69d563db-e4f3-4bd3-be8c-44926ea56a7d\",\n",
+      "  \"createdOn\": \"2024-10-22T05:11:09.773760+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/resourcegroups/rg-AITOUR45022651/providers/Microsoft.Authorization/roleAssignments/73d6c711-72b9-5ee5-b2dd-a6829cfd1a43\",\n",
+      "  \"name\": \"73d6c711-72b9-5ee5-b2dd-a6829cfd1a43\",\n",
+      "  \"principalId\": \"69d563db-e4f3-4bd3-be8c-44926ea56a7d\",\n",
+      "  \"principalName\": \"https://lodazurepass.onmicrosoft.com/45587fa8-5f05-46d9-8d71-595d74062152\",\n",
+      "  \"principalType\": \"ServicePrincipal\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR45022651\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/providers/Microsoft.Authorization/roleDefinitions/8ebe5a00-799e-43f5-93ac-243d3dce84a7\",\n",
+      "  \"roleDefinitionName\": \"Search Index Data Contributor\",\n",
+      "  \"scope\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/resourcegroups/rg-AITOUR45022651\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"69d563db-e4f3-4bd3-be8c-44926ea56a7d\",\n",
+      "  \"updatedOn\": \"2024-10-22T05:11:11.286641+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-10-22T11:24:30.392609+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/resourceGroups/rg-AITOUR45022651/providers/Microsoft.Authorization/roleAssignments/f0edf6f6-2615-4ad5-b3aa-91a94d80f67a\",\n",
+      "  \"name\": \"f0edf6f6-2615-4ad5-b3aa-91a94d80f67a\",\n",
+      "  \"principalId\": \"927b5349-358c-4e9b-9786-e5ea7c1aee80\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR45022651\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/providers/Microsoft.Authorization/roleDefinitions/5e0bd9bd-7b93-4f28-af87-19fc36ad61bd\",\n",
+      "  \"scope\": \"/subscriptions/4f9ff489-eeba-4900-88d7-77b6ed48c277/resourceGroups/rg-AITOUR45022651\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"927b5349-358c-4e9b-9786-e5ea7c1aee80\",\n",
+      "  \"updatedOn\": \"2024-10-22T11:24:30.996042+00:00\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "! bash ../../infra/hooks/roles.sh"
    ]
@@ -211,9 +391,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mRunning hooks (azd hooks run)\u001b[0m\n",
+      "\u001b[90mFinding and executing \u001b[36mpostprovision\u001b[0m hooks for environment \u001b[36mAITOUR45022651\u001b[0m.\u001b[0m\n",
+      "\n",
+      "Running 1 postprovision command hook(s) for project\n",
+      "\u001b[K  Running 1 postprovision command hook(s) for project\n",
+      "\n",
+      "\u001b[K  ──── Project: postprovision Hook Output ──────────────────────────────────────\n",
+      "\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\u001b[K  --- ✅ | 3. Post-provisioning - populated data ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\u001b[K  --- ✅ | 3. Post-provisioning - populated data ---\n",
+      "\u001b[K  --- 🎉 | 4. Access your ACA deployed web app here: https://agent-web.purplep\n",
+      "\u001b[K  ond-63d461c5.canadaeast.azurecontainerapps.io\n",
+      "\n",
+      "\u001b[K  \u001b[32m(✓) Done:\u001b[0m Running 1 postprovision command hook(s) for project─────\n",
+      "  \u001b[33m(!) Warning:\u001b[0m Running 0 postprovision service hook(s) for api (No hook found)\n",
+      "  \u001b[33m(!) Warning:\u001b[0m Running 0 postprovision service hook(s) for web (No hook found)\n",
+      "\u001b[32m\n",
+      "SUCCESS: Your hooks have been run successfully\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! echo 1 | azd hooks run postprovision -e $AzureEnvName"
    ]
