--- a/docs/workshop/workshop-1-intro.ipynb
+++ b/docs/workshop/workshop-1-intro.ipynb
@@ -187,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "[ToolCall(id='call_M8ivAxueua0tivf63nxVOb5e', name='find_information', arguments='{\"query\":\"best educational material for learning Python programming\",\"market\":\"en-US\"}')]"
+       "[ToolCall(id='call_q8RGrkpn5vNsP6GrA7laajdF', name='find_information', arguments='{\"query\":\"best educational material for learning Python programming\",\"market\":\"en-US\"}')]"
       ]
      },
      "execution_count": 1,
@@ -236,9 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ToolCall(id='call_cCjlx8nV7XOEY10inullZd9s', name='find_entities', arguments='{\"query\":\"inventor of Python programming language\",\"market\":\"en-US\"}')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "instructions = \"Who is the person who invented the Python programming language?\"\n",
     "prompty.execute(os.getcwd() + \"/researcher/researcher-2.prompty\", inputs={\"instructions\": instructions})"
@@ -261,9 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ToolCall(id='call_DCwyc0RCymZ8iGhBt04YUONZ', name='find_information', arguments='{\"query\":\"Microsoft\",\"market\":\"en-US\"}')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "instructions = \"Find the latest news about Microsoft?\"\n",
     "prompty.execute(os.getcwd() + \"/researcher/researcher-2.prompty\", inputs={\"instructions\": instructions})"
@@ -358,9 +380,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'call_rNpkozNPoQzwdyZV3tl1SBOL',\n",
+       "  'function': 'find_information',\n",
+       "  'arguments': {'query': 'best educational material for learning Python programming',\n",
+       "   'market': 'en-US'},\n",
+       "  'result': {'pages': [{'url': 'https://realpython.com/best-python-books/',\n",
+       "     'name': 'The Best Python Books',\n",
+       "     'description': 'Best Books for Learning Python. Python Crash Course. Head-First Python, 2nd edition. Invent Your Own Computer Games with Python, 4th edition. Think Python: How to Think Like a Computer Scientist, 2nd edition. Effective Computation in Physics: Field Guide to Research with Python. Learn Python 3 the Hard Way.'},\n",
+       "    {'url': 'https://hackr.io/blog/best-python-books-for-beginners-and-advanced-programmers',\n",
+       "     'name': 'The 15 Best Python Books for Beginners & Advanced Coders [2024] - Hackr',\n",
+       "     'description': 'Check Out These Python Books. In this article, we share the 15 best Python books in 2024. Whether you’re new to Python or an experienced Pythonista looking to boost your skills, we’ve included Python books for beginners and pros. As the number 3 language among developers, python books can be the ideal way to learn Python for data science ...'},\n",
+       "    {'url': 'https://www.geeksforgeeks.org/best-python-books/',\n",
+       "     'name': '9 Best Python Books For Beginners and Experts [2024]',\n",
+       "     'description': '1. Python Crash Course: A Hands-On, Project-Based Introduction to Programming (2nd Edition) 2. Head-First Python: A Brain-Friendly Guide (2nd Edition) 3. Learn Python the Hard Way: 3rd Edition. 4. Python Programming: An Introduction to Computer Science (3rd Edition) Best Python Books for Intermediates/Experts.'},\n",
+       "    {'url': 'https://www.datacamp.com/blog/how-to-learn-python-expert-guide',\n",
+       "     'name': 'How to Learn Python From Scratch in 2024: An Expert Guide',\n",
+       "     'description': 'This step-by-step guide assumes you’re at learning Python from scratch, meaning you’ll have to start with the very basics and work your way up. 1. Understand why you’re learning Python. Firstly, it’s important to figure out your motivations for wanting to learn Python.'},\n",
+       "    {'url': 'https://www.codecademy.com/resources/blog/best-python-books/',\n",
+       "     'name': '5 Best Python Books For Beginners - Codecademy',\n",
+       "     'description': 'If you’re completely new to programming. If you’re starting from scratch, Michelle recommends Python Programming: An Introduction to Computer Science by John Zelle. “It’s such a good foundation,” she says. “It provides a classic introduction to programmatic thinking via Python.”. Python Programming explores the fundamentals of ...'}],\n",
+       "   'related': ['best python for beginners',\n",
+       "    'learning with python examples',\n",
+       "    'how to learn python free',\n",
+       "    'is python easy to learn',\n",
+       "    'best way to learn python',\n",
+       "    'best python books for kids',\n",
+       "    'learning python for beginners',\n",
+       "    'best python book examples']}}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
